# kai

./: .gitignore  README.md  kai.py  main.py  pyproject.toml
calculator/: lorem.txt
kai/: cli.py  config.py  get_file_content.py  get_files_info.py  run_python_file.py  run_python_files.py  write_file.py
kai_tools/: get_files_info.py
tests/: test_get_files_contents.py  test_get_files_info.py  test_write_file.py
